--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +12,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "postcss-selector-parser": "^6.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
